<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".upload.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pb_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_camera_preview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_radius"
            android:text="@string/gallery"
            app:layout_constraintStart_toStartOf="@id/iv_camera_preview"
            app:layout_constraintTop_toBottomOf="@id/iv_camera_preview" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:background="@drawable/bg_radius"
            android:text="@string/camera"
            app:layout_constraintStart_toEndOf="@id/btn_gallery"
            app:layout_constraintTop_toTopOf="@id/btn_gallery" />

        <EditText
            android:id="@+id/edt_add_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:hint="@string/fill_the_description"
            android:inputType="textMultiLine"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery" />

        <Button
            android:id="@+id/btn_upload_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_radius"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="@id/edt_add_story"
            app:layout_constraintStart_toStartOf="@id/edt_add_story"
            app:layout_constraintTop_toBottomOf="@id/edt_add_story"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>