<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frgmnt_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rifqi.testpaging3.customview.CustomEmailEditText
            android:id="@+id/edt_username_login"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"

            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="@id/tv_welcome"
            app:layout_constraintStart_toStartOf="@id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

        <com.rifqi.testpaging3.customview.CustomPasswordEditText
            android:id="@+id/edt_pass_login"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/password"
            android:inputType="textPassword"

            app:layout_constraintEnd_toEndOf="@id/edt_username_login"
            app:layout_constraintStart_toStartOf="@id/edt_username_login"
            app:layout_constraintTop_toBottomOf="@id/edt_username_login" />

        <com.rifqi.testpaging3.customview.CustomLoginButton
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@id/edt_pass_login"
            app:layout_constraintStart_toStartOf="@id/edt_pass_login"
            app:layout_constraintTop_toBottomOf="@id/edt_pass_login" />

        <TextView
            android:id="@+id/tv_tosignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dont_have_account_sign_up"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/edt_pass_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>